[gd_scene load_steps=30 format=3 uid="uid://cxp6btao2do4h"]

[ext_resource type="Script" path="res://Scripts/Ennemy/orc.gd" id="1_vxr5y"]
[ext_resource type="Texture2D" uid="uid://dp7dxq0dj0coj" path="res://Assets/Graphics/PNG_tiles/Orc/Orc/Orc-Attack01.png" id="1_wgqot"]
[ext_resource type="Texture2D" uid="uid://ws04bo3pea3l" path="res://Assets/Graphics/PNG_tiles/Orc/Orc/Orc-Idle.png" id="2_476n3"]
[ext_resource type="Texture2D" uid="uid://bf0ybuwku5lqb" path="res://Assets/Graphics/PNG_tiles/Orc/Orc/Orc-Walk.png" id="3_k1sos"]
[ext_resource type="PackedScene" uid="uid://5r4qtv5ddgdp" path="res://Prefabs/Interface/life_bar.tscn" id="5_r6022"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rsbmr"]
atlas = ExtResource("1_wgqot")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6b3x"]
atlas = ExtResource("1_wgqot")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4m4l"]
atlas = ExtResource("1_wgqot")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ux43"]
atlas = ExtResource("1_wgqot")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekdp6"]
atlas = ExtResource("1_wgqot")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ka0xl"]
atlas = ExtResource("1_wgqot")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aijo0"]
atlas = ExtResource("2_476n3")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxg2w"]
atlas = ExtResource("2_476n3")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q5xm"]
atlas = ExtResource("2_476n3")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1rnl"]
atlas = ExtResource("2_476n3")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cxbo"]
atlas = ExtResource("2_476n3")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgco7"]
atlas = ExtResource("2_476n3")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfqve"]
atlas = ExtResource("3_k1sos")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8cpn"]
atlas = ExtResource("3_k1sos")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_safsg"]
atlas = ExtResource("3_k1sos")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c76en"]
atlas = ExtResource("3_k1sos")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eex5l"]
atlas = ExtResource("3_k1sos")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wgjp"]
atlas = ExtResource("3_k1sos")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_74s7c"]
atlas = ExtResource("3_k1sos")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkwoh"]
atlas = ExtResource("3_k1sos")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_7pbo4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsbmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6b3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4m4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ux43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekdp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka0xl")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aijo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxg2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q5xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1rnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cxbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgco7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfqve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8cpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_safsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c76en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eex5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wgjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74s7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkwoh")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w27f5"]
radius = 55.0091

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8021v"]
size = Vector2(40, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0hod"]
size = Vector2(7, 3)

[node name="Orc" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 32
collision_mask = 13
script = ExtResource("1_vxr5y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7pbo4")
animation = &"attack"
frame_progress = 0.570682
offset = Vector2(0, -6)

[node name="detectionArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
shape = SubResource("CircleShape2D_w27f5")

[node name="attackArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
position = Vector2(4, -4.5)
shape = SubResource("RectangleShape2D_8021v")

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 0.8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_h0hod")

[node name="DammageTick" type="Timer" parent="."]
wait_time = 0.2

[node name="LifeBar" parent="." instance=ExtResource("5_r6022")]
offset_left = -10.0
offset_top = -19.0
offset_right = 11.0
offset_bottom = -16.0

[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="attackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_timer_attack_timeout"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DammageTick" to="." method="_on_dammage_tick_timeout"]
